add sentinel and jvm notes (#145)
* add sentinel and jvm notes

* remove useless dependency

* format code

* improve sentinel demo